<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="@dimen/act_padding"
  tools:context="com.andrefilgs.lookdownapp.samples.sample01.Sample01Activity">
  
  <LinearLayout
    android:id="@+id/ll_chunksize"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_marginTop="20dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:orientation="horizontal">
    
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="10dp"
      android:text="@string/chunk_size"
      android:textAllCaps="true"
      android:textColor="#000000"
      android:textSize="16sp"
      />
    
    <Button
      android:id="@+id/btn_decrease_chunck"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:text="@string/minus"
      />
    
    <TextView
      android:id="@+id/tv_chunck_size"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:text="1024"
      android:textAllCaps="true"
      android:textColor="#000000"
      android:textSize="16sp"
      tools:ignore="HardcodedText" />
    
    <Button
      android:id="@+id/btn_increase_chunck"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:text="@string/plus"
      />
  
  </LinearLayout>
  
  <Button
    android:id="@+id/btn_delete"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/act_padding"
    android:text="@string/delete"
    app:layout_constraintEnd_toStartOf="@id/btn_cancel"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/ll_chunksize" />
  
  <Button
    android:id="@+id/btn_cancel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/act_padding"
    android:text="@string/cancel"
    app:layout_constraintEnd_toStartOf="@id/btn_resume"
    app:layout_constraintStart_toEndOf="@id/btn_delete"
    app:layout_constraintTop_toBottomOf="@id/ll_chunksize" />
  
  
  <Button
    android:id="@+id/btn_resume"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:text="@string/resume"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/btn_cancel"
    app:layout_constraintTop_toTopOf="@+id/btn_cancel" />
  
  
  <Button
    android:id="@+id/btn_download"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/act_padding"
    android:text="@string/download"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/btn_cancel" />
  
  
  
  
  <ProgressBar
    android:id="@+id/progressbar_download"
    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:max="100"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_progress"
    tools:progress="50" />
  
  <ProgressBar
    android:id="@+id/progressbar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="gone"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:visibility="visible" />
  
  <TextView
    android:id="@+id/tv_progress"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/act_padding"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/btn_download"
    tools:text="Progress: 50%" />
  
  <TextView
    android:id="@+id/tv_output"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:text="Output" />

</androidx.constraintlayout.widget.ConstraintLayout>